hsp3-forgery/tests/syntax_error/syntax_error_snapshot_ast.txt
ANodeData {
    node: Root(
        ARootNode {
            errors: [
                SyntaxError {
                    msg: "カッコの中は空にできません",
                    location: syntax_error.hsp:1.9-1.10,
                },
                SyntaxError {
                    msg: "カッコの中は空にできません",
                    location: syntax_error.hsp:2.9-2.10,
                },
                SyntaxError {
                    msg: "ラベルの名前がありません",
                    location: syntax_error.hsp:4.13-4.14,
                },
                SyntaxError {
                    msg: "ラベルの名前がありません",
                    location: syntax_error.hsp:5.1-5.2,
                },
            ],
        },
    ),
    children: [
        ANodeData {
            node: Stmt(
                Command(
                    ACommandStmt {
                        command: "mes",
                        args: [
                            AArg {
                                expr_opt: Some(
                                    Call(
                                        ACallExpr {
                                            cal: ANameExpr {
                                                token: "a",
                                            },
                                            left_paren_opt: Some(
                                                "(",
                                            ),
                                            args: [],
                                            right_paren_opt: Some(
                                                ")",
                                            ),
                                        },
                                    ),
                                ),
                                comma_opt: None,
                            },
                            AArg {
                                expr_opt: Some(
                                    Group(
                                        AGroupExpr {
                                            left_paren: "(",
                                            body_opt: None,
                                            right_paren_opt: Some(
                                                ")",
                                            ),
                                        },
                                    ),
                                ),
                                comma_opt: None,
                            },
                        ],
                        sep_opt: Some(
                            "\n\t",
                        ),
                    },
                ),
            ),
            children: [],
        },
        ANodeData {
            node: Stmt(
                Command(
                    ACommandStmt {
                        command: "mes",
                        args: [
                            AArg {
                                expr_opt: Some(
                                    Group(
                                        AGroupExpr {
                                            left_paren: "(",
                                            body_opt: Some(
                                                Name(
                                                    ANameExpr {
                                                        token: "a",
                                                    },
                                                ),
                                            ),
                                            right_paren_opt: Some(
                                                ")",
                                            ),
                                        },
                                    ),
                                ),
                                comma_opt: None,
                            },
                            AArg {
                                expr_opt: Some(
                                    Group(
                                        AGroupExpr {
                                            left_paren: "(",
                                            body_opt: None,
                                            right_paren_opt: Some(
                                                ")",
                                            ),
                                        },
                                    ),
                                ),
                                comma_opt: None,
                            },
                        ],
                        sep_opt: Some(
                            "\n\n\t",
                        ),
                    },
                ),
            ),
            children: [],
        },
        ANodeData {
            node: Stmt(
                Command(
                    ACommandStmt {
                        command: "button",
                        args: [
                            AArg {
                                expr_opt: Some(
                                    Str(
                                        AStrExpr {
                                            start_quote: "\"",
                                            segments: [],
                                            end_quote_opt: Some(
                                                "\"",
                                            ),
                                        },
                                    ),
                                ),
                                comma_opt: Some(
                                    ",",
                                ),
                            },
                            AArg {
                                expr_opt: Some(
                                    Label(
                                        StarOnly {
                                            star: "*",
                                        },
                                    ),
                                ),
                                comma_opt: None,
                            },
                        ],
                        sep_opt: Some(
                            "\n",
                        ),
                    },
                ),
            ),
            children: [],
        },
        ANodeData {
            node: Stmt(
                Label(
                    ALabelStmt {
                        label: StarOnly {
                            star: "*",
                        },
                        sep_opt: Some(
                            "\n",
                        ),
                    },
                ),
            ),
            children: [],
        },
    ],
}
